Added meta and favicon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="description" content="Falcon System Commercial Co is a leading sourcing and supplier of all your industrial needs. Founded by Sayyed Yahya Alzahrani, it proves to be a leading standard for procurements and supplies in Saudi Arabia. It caters to Industrial Procurements, Mechanical Supplies, Petrochemical Industry, Petrochemical Supplies, Industrial Automation Solution and Products, Power Industry, etc">
+		<meta name="keywords" content="Falcon System Commercial Co, Heavy Machinery, steel sheets, pipe chart, calculator, importing and trading,steel sheets and plates,cold rolled sheets,hot rolled sheets, heavy plates, galvanized steel,pipes and tubes,seamless steel pipes, cold- and hot-finished,seamless and welded steel pipes,welded round steel pipes,hot rolled products, round bars, flat bars,hot rolled square bars,european profiles,upn profiles,ipe profiles,ipn profiles,hea(ipbl) - wide flange beams,heb(ipb) - wide flange beams, hollow sections,welded square steel hollow sections,welded rectangular steel hollow sections,concrete reinforcing steel,wire rod">
+		<meta name="author" content="Falcon Sys Co">
+		
 		<title>Falcon System Commercial Co</title>
+		<link rel="shortcut icon" href="favicon.ico" />
+		
 		<!-- For Google Fonts -->
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@400;500;700;900&family=Rakkas&display=swap" rel="stylesheet">
@@ -451,7 +457,7 @@
 					<h2>About Us</h2>
 					<p>
 						<em>Falcon System</em> is a Global Partner to new, upcoming and existing business ventures.
-						Our bench-mark trading evolves around the principal of <em>Quick Response, Worldwide Sourcing, Prompt Deliveries with Supervisory Services for Installation and Commissioning;</em> and an ever efficient salses services thereafter	
+						Our bench-mark trading evolves around the principal of <em>Quick Response, Worldwide Sourcing, Prompt Deliveries with Supervisory Services for Installation and Commissioning;</em> and an ever efficient sales services thereafter	
 					</p>
 					<ul class="sci">
 						<li><a href=""><i class="fab fa-facebook contact-us-icon"></i></a></li>
