Fixed pipe-calculator form bug
Added "utilities-form" class to "pipe-calculator-form"

--- a/utilities.html
+++ b/utilities.html
@@ -153,7 +153,7 @@
 								<button type="button" class="btn btn-outline-light btn-lg" id="clickToPipeCalculator">Calculate <i class="fas fa-calculator"></i></button>
 							</div>
 						</div>
-						<div id="pipe-calculator-form">
+						<div id="pipe-calculator-form" class="utilities-form">
 							<form>
 								<div class="row">
 									<div class="input-group">
