--- a/index.html
+++ b/index.html
@@ -432,16 +432,21 @@
 				<div class="col-lg-12">
 					<h1>Our <span style="color: #bb8c00; font-weight: bold;">Certifications</span></h1>
 				</div>
-				<div class="col-lg-6 fade">
+				<div class="col-lg-4 fade">
 					<div class="certification-img">
 						<a href=""><img src="images/maaden.jpg"></a>
 					</div>
 				</div>
-				<div class="col-lg-6 fade">
+				<div class="col-lg-4 fade">
 					<div class="certification-img">
 						<a href=""><img src="images/sadara.png"></a>
 					</div>
-				</div>			
+				</div>
+				<div class="col-lg-4 fade">
+					<div class="certification-img">
+						<a href=""><img src="images/tarshid_cert.jpg"></a>
+					</div>
+				</div>
 			</div>
 		</section>
 		
