--- a/utilities.html
+++ b/utilities.html
@@ -92,11 +92,11 @@
 		<section id="utilities" class="fade">
 			<div class="row">
 				<div class="col-lg-4 utility-menu">
-					<div class="utility-button-list">
+<!-- 					<div class="utility-button-list">
 						<button id="activate-pipe-chart" type="button" id="pipe-chart-button" class="btn btn-dark active utility-menu-button">Pipe Chart</button>
-					</div>
+					</div> -->
 					<div class="utility-button-list">
-						<button id="activate-pipe-calculator" type="button" class="btn btn-dark utility-menu-button">Pipe Calculator</button>
+						<button id="activate-pipe-calculator" type="button" class="btn btn-dark active utility-menu-button">Pipe Calculator</button>
 					</div>
 					<div class="utility-button-list">
 						<button id="activate-steel-sheet-calculator" type="button" class="btn btn-dark utility-menu-button">Steel Sheets Calculator</button>
@@ -136,7 +136,7 @@
 					</div>
 				</div>
 				<div class="col-lg-8 utility-item">
-					<div id="pipe-chart">
+<!-- 					<div id="pipe-chart">
 						<div class="utilities-text">
 							Pipe Chart
 							<div class="utilities-button">
@@ -145,7 +145,7 @@
 								</form>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div id="pipe-calculator">
 						<div class="utilities-text">
 							Pipe Calculator
