--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 		<link rel="stylesheet" href="css/styles.css">
 		
 		<script src="https://kit.fontawesome.com/07adc67c06.js" crossorigin="anonymous"></script>
+		
+		<style>
+			.navbar{
+				background-color: rgba(10,17,34, 0.0);
+			}
+			.shrink{
+				background-color: rgba(10,17,34, 0.8);
+			}
+		</style>
+		
 	</head>
 	<body>
 		<section id="title">
