--- a/about_us.html
+++ b/about_us.html
@@ -172,13 +172,6 @@
 			</div>
 		</section>
 
-
-		<section id="map" class="fade">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3579.392442810317!2d50.190645614533!3d26.216435196028197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e49c3b6940445e9%3A0x281f0b679516daf3!2z2KfYqNix2KfYrCDYs9i52K8g2KfZhNmC2K3Yt9in2YbZiiBTUSBUT1dFUlM!5e0!3m2!1sen!2sin!4v1622621042163!5m2!1sen!2sin" width="100%" height="650" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" alt="map-here"></iframe>
-		</section>
-
-
-
 		<footer id="footer">
 			<div class="footer-container">
 				<div class="sec about-us">
@@ -213,12 +206,7 @@
 					</ul>
 				</div>
 				<div class="sec contactus">
-					<form>
-						<h2>Contact Us</h2>
-						<input id="emailId" class="form-control cta-email" type="email" placeholder="Your Email" required>
-						<textarea id="queryMessage" class="cta-message" placeholder="Anything we could assist you with?"></textarea><br>
-						<button id="submit-button" type="submit" class="btn btn-primary cta-button">Send</button>
-					</form>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3579.392442810317!2d50.190645614533!3d26.216435196028197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e49c3b6940445e9%3A0x281f0b679516daf3!2z2KfYqNix2KfYrCDYs9i52K8g2KfZhNmC2K3Yt9in2YbZiiBTUSBUT1dFUlM!5e0!3m2!1sen!2sin!4v1622621042163!5m2!1sen!2sin" width="100%" height="400px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" alt="map-here"></iframe>
 				</div>
 			</div>
 		</footer>
