--- a/about_us.html
+++ b/about_us.html
@@ -40,26 +40,28 @@
 								</div>
 							</li>
 							<li class="nav-item dropdown">
-								<a class="nav-link" href="products_and_services.html" title="">Products</a>
+								<a class="nav-link" href="" title="">Products</a>
 								<div class="dropdown-menu products_dropdown">
 									<!-- NOTE - We are DELIBERATELY REFERENCING the PREVIOUS ELEMENT (in href="link_to_prev_element") because we want the CARD-HEADER to also be visible. Else the CARD-HEADER of the ACCORDION will GO BEHIND the FLOATING NAVBAR -->
 									<a id="goto-mechanical-products" class="dropdown-item" href="products_and_services.html#our-products-accordion">Mechanical Products</a>
+									<a id="goto-mechanical-products" class="dropdown-item" href="products_and_services.html#instrumentation-products">Electrical Products</a>
+									<a id="goto-electrical-products" class="dropdown-item" href="products_and_services.html#equipment-rental-products">Civil Products</a>
 									<a id="goto-instrumentation-products" class="dropdown-item" href="products_and_services.html#mechanical-products">Instrumentation Products</a>
-									<a id="goto-electrical-products" class="dropdown-item" href="products_and_services.html#instrumentation-products">Electrical Products</a>
-									<a id="goto-industrial-automation-products" class="dropdown-item" href="products_and_services.html#electrical-products">Industrial Automation Products</a>
-									<a id="goto-industrial-automation-solution" class="dropdown-item" href="products_and_services.html#industrial-automation-products">Industrial Automation Solution</a>
-									<a id="goto-fire-and-safety" class="dropdown-item" href="products_and_services.html#industrial-automation-solution">Fire and Safety Products</a>
-									<a id="goto-it-and-networking" class="dropdown-item" href="products_and_services.html#fire-and-safety">IT and Networking Solutions</a>
-									<a id="goto-machinery_rentals" class="dropdown-item" href="products_and_services.html">Rentals of Heavy Equipments & Machinery</a>
+									<a id="goto-fire-and-safety" class="dropdown-item" href="products_and_services.html#instrumentation-products">Fire and Safety Products</a>
+									<a id="goto-automation-and-communication" class="dropdown-item" href="products_and_services.html#fire-and-safety">Automation and Communication</a>
+									<a id="goto-equipment-rental-products" class="dropdown-item" href="products_and_services.html#automation-products">Equipment Rental Products</a>
 								</div>
 							</li>
+
 							<li class="nav-item dropdown">
-								<a class="nav-link" href="products_and_services.html" title="">Services</a>
+								<a class="nav-link" href="" title="">Services</a>
 								<div class="dropdown-menu services_dropdown">
 									<a id="goto-mechanical-services" class="dropdown-item" href="products_and_services.html#our-services-accordion">Mechanical Services</a>
 									<a id="goto-electrical-services" class="dropdown-item" href="products_and_services.html#mechanical-services">Electrical Services</a>
-									<a id="goto-power-and-fuel-services" class="dropdown-item" href="products_and_services.html#electrical-services">Power and Fuel Services</a>
-									<a id="goto-it-and-networking-services" class="dropdown-item" href="products_and_services.html#power-and-fuel-services">IT and Networking Services</a>
+									<a id="goto-civil-services" class="dropdown-item" href="products_and_services.html#electrical-services">Civil Services</a>
+									<a id="goto-instrumentation-services" class="dropdown-item" href="products_and_services.html#civil-services">Instrumentation Services</a>
+									<a id="goto-fire-and-safety-services" class="dropdown-item" href="products_and_services.html#instrumentation-services">Fire & Safety Services</a>
+									<a id="goto-automation-services" class="dropdown-item" href="products_and_services.html#fire-and-safety-services">Automation and Communication</a>
 								</div>
 							</li>
 							<li class="nav-item">
