--- a/products_and_services.html
+++ b/products_and_services.html
@@ -43,9 +43,9 @@
 								<div class="dropdown-menu products_dropdown">
 									<!-- NOTE - We are DELIBERATELY REFERENCING the PREVIOUS ELEMENT (in href="link_to_prev_element") because we want the CARD-HEADER to also be visible. Else the CARD-HEADER of the ACCORDION will GO BEHIND the FLOATING NAVBAR -->
 									<a id="goto-mechanical-products" class="dropdown-item" href="#our-products-accordion">Mechanical Products</a>
-									<a id="goto-mechanical-products" class="dropdown-item" href="#instrumentation-products">Electrical Products</a>
-									<a id="goto-electrical-products" class="dropdown-item" href="#equipment-rental-products">Civil Products</a>
-									<a id="goto-instrumentation-products" class="dropdown-item" href="#mechanical-products">Instrumentation Products</a>
+									<a id="goto-electrical-products" class="dropdown-item" href="#mechanical-products">Electrical Products</a>
+									<a id="goto-civil-products" class="dropdown-item" href="#electrical-products">Civil Products</a>
+									<a id="goto-instrumentation-products" class="dropdown-item" href="#civil-products">Instrumentation Products</a>
 									<a id="goto-fire-and-safety" class="dropdown-item" href="#instrumentation-products">Fire and Safety Products</a>
 									<a id="goto-automation-and-communication" class="dropdown-item" href="#fire-and-safety">Automation and Communication</a>
 									<a id="goto-equipment-rental-products" class="dropdown-item" href="#automation-products">Equipment Rental Products</a>	
