--- a/about_us.html
+++ b/about_us.html
@@ -44,9 +44,9 @@
 								<div class="dropdown-menu products_dropdown">
 									<!-- NOTE - We are DELIBERATELY REFERENCING the PREVIOUS ELEMENT (in href="link_to_prev_element") because we want the CARD-HEADER to also be visible. Else the CARD-HEADER of the ACCORDION will GO BEHIND the FLOATING NAVBAR -->
 									<a id="goto-mechanical-products" class="dropdown-item" href="products_and_services.html#our-products-accordion">Mechanical Products</a>
-									<a id="goto-mechanical-products" class="dropdown-item" href="products_and_services.html#instrumentation-products">Electrical Products</a>
-									<a id="goto-electrical-products" class="dropdown-item" href="products_and_services.html#equipment-rental-products">Civil Products</a>
-									<a id="goto-instrumentation-products" class="dropdown-item" href="products_and_services.html#mechanical-products">Instrumentation Products</a>
+									<a id="goto-elecrical-products" class="dropdown-item" href="products_and_services.html#mechanical-products">Electrical Products</a>
+									<a id="goto-civil-products" class="dropdown-item" href="products_and_services.html#electrical-products">Civil Products</a>
+									<a id="goto-instrumentation-products" class="dropdown-item" href="products_and_services.html#civil-products">Instrumentation Products</a>
 									<a id="goto-fire-and-safety" class="dropdown-item" href="products_and_services.html#instrumentation-products">Fire and Safety Products</a>
 									<a id="goto-automation-and-communication" class="dropdown-item" href="products_and_services.html#fire-and-safety">Automation and Communication</a>
 									<a id="goto-equipment-rental-products" class="dropdown-item" href="products_and_services.html#automation-products">Equipment Rental Products</a>
